# Melodik

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CURR_STATUS_4MVP.md  DEVELOPMENT.md  DEV_GUIDE.md  GUIDE.md  MELODICK_DESIGN.md  MVP_CURR_STATUS.md  MVP_STATUS.md  RELEASE.md  TESTING.md  UI_GUIDE.md
include/melodick/app/: capability_chain.h  session.h
include/melodick/capabilities/: backends.h  segmenter.h
include/melodick/core/: audio_resampler.h  note_blob.h  pitch_data.h  pitch_preprocessing.h  time_range.h
include/melodick/io/: wav_io.h
include/melodick/project/: project_state.h
include/melodick/render/: dirty_timeline.h  lazy_render_scheduler.h  render_group_planner.h
scripts/: build.ps1  common.ps1  package.ps1  plot_analysis.py  plot_segmentation_debug.py  test.ps1
src/app/: capability_chain.cpp  session.cpp
src/app/standalone/: main.cpp
src/capabilities/: onnx_backends.cpp  segmenter.cpp
src/core/: audio_resampler.cpp  note_blob.cpp  pitch_preprocessing.cpp
src/io/: wav_io.cpp
src/project/: project_state.cpp
src/render/: dirty_timeline.cpp  lazy_render_scheduler.cpp  render_group_planner.cpp
src/tools/: analysis_dump_main.cpp
tests/: test_audio_resampler.cpp  test_framework.h  test_main.cpp  test_note_blob.cpp  test_project.cpp  test_render.cpp  test_segmentation.cpp  test_session.cpp
